# FastMd5

./: README.md
app/: build.gradle
app/src/androidTest/java/com/tap/fastmd5/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tap/fastmd5/: JavaMd5.java  MD5Act.java  NativeMd5.java
app/src/main/java/com/twmacinta/util/: MD5.java  MD5InputStream.java  MD5OutputStream.java
app/src/main/jni/: Android.mk  CMakeLists.txt  common.h  local.c  md5.c  nativemd5.c  nativemd5.h  nativemd5driver.c  nativemd5driver.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/tap/fastmd5/: ExampleUnitTest.java
